@@ -1,3 +1,9 @@
+2003-01-31  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/jacl/tcl/lang/FormatCmd.java (cmdProc, cvtStrToStr):
+	Fixup failing format test cases that had to do with
+	padding with zeros and negative width values.
+
 2003-01-27  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* tests/tclblend/loading.test: Add unimplemented
